# Churn-Model-Practice

./: .dockerignore  .gitignore  README.md  TASKS.md  pyproject.toml  requirements.txt
config/: avg_monthly_added_v1.yaml  experiment_v2.yaml  ignore_features_v1.yaml  log_reg_baseline.yaml  svm_added_v1.yaml  xgboost_added_v1.yaml
docker/: Dockerfile
notebooks/: cleaned_data_test.ipynb  dataset_explore.ipynb
src/: config.py  main.py
src/components/: data_ingestion.py  model_building.py  preprocessing.py  run_experiments.py
src/pipeline/: model_pipeline.py
